App Engine and initial dev of created events

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "UniversityEventsManager",
+  "name": "university-events-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./server.js",
   "scripts": {
     "start": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
